--- a/code-challenger/src/main/resources/static/index.html
+++ b/code-challenger/src/main/resources/static/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="aluno">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Loja</title>
+
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<!-- Última versão CSS compilada e minificada -->
+
+<meta
+	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
+	name='viewport' />
+<meta name="viewport" content="width=device-width" />
+<!-- Ãšltima versÃ£o CSS compilada e minificada -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 
 <!-- Tema opcional -->
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
-<!-- jQuery (obrigatório para plugins JavaScript do Bootstrap) -->
+<!-- jQuery (obrigatÃ³rio para plugins JavaScript do Bootstrap) -->
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Última versão JavaScript compilada e minificada -->
+<!-- Ãšltima versÃ£o JavaScript compilada e minificada -->
 <script src="js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="js/angular.min.js"></script>
+<script type="text/javascript" src="js/angular-route.js"></script>
+<script type="text/javascript" src="js/angular-resource.js"></script>
+<script type="text/javascript" src="js/angular-animate.js"></script>
+<script type="text/javascript" src="js/angular-locale_pt-br.js"></script>
+
+<script src="js/app.js"></script>
 </head>
-<body>
+<body ng-controller="controllerAluno">
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -34,12 +49,12 @@
 			<div class="collapse navbar-collapse"
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="dropdown"><a href="#" class="dropdown-toggle"
+					<li class="dropdown"><a href="" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">Aluno <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Cadastro</a></li>
-							<li><a href="#">Lista</a></li>
+							<li><a href="#cadastro">Cadastro</a></li>
+							<li><a href="#alunolist">Lista</a></li>
 						</ul></li>
 				</ul>
 
@@ -49,7 +64,7 @@
 		<!-- /.container-fluid -->
 	</nav>
 
-
+	<div class="content" ng-view></div>
 
 </body>
 </html>
